refactor: UserRepository findByUsername Optional 제거